src/test/deca/codegen/invalid/debordement_divide.deca
{
    3.4028235e38f / 0.0;
}